crates/core/tests/snapshots/golden_text__shielding_without_a_nickname_cache_or_a_dictionary.snap
---
source: crates/core/tests/golden_text.rs
expression: table
---
in:     アズルルさん、こんにちは
masked: アズルルさん、こんにちは

in:     【お知らせ】3回目
masked: [P0]お知らせ[P1][P2]目
  [P0] -> 【
  [P1] -> 】
  [P2] -> 3회
